tests/ui/const-generics/generic_const_exprs/mismatched-gat-subst-kind.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/mismatched-gat-subst-kind.rs:1:12
   |
LL | #![feature(generic_const_exprs)]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0747]: constant provided when a type was expected
  --> $DIR/mismatched-gat-subst-kind.rs:8:13
   |
LL | fn f<T: B<U<1i32> = ()>>() {}
   |             ^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0747`.
